# MCP-watch

./: LICENSE  README.md  SOCIAL_MEDIA_LAUNCH_KIT.md  pyproject.toml
mcp_watch/: __init__.py  cli.py  watcher.py
mcp_watch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
opencode_mcp_watch.egg-info/: PKG-INFO  SOURCES.txt
