[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-mcp-watch"
version = "0.1.1"
description = "Auto-reload OpenCode MCP servers without restarting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "efrg123", email = "efrg123@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["opencode", "mcp", "watcher", "reload", "auto-reload", "claude", "claude-code"]
requires-python = ">=3.8"
dependencies = [
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
mcp-watch = "mcp_watch.watcher:main"
mcp-watch-start = "mcp_watch.watcher:start_daemon"
mcp-watch-stop = "mcp_watch.watcher:stop_daemon"

[project.urls]
Homepage = "https://github.com/efrg123/MCP-watch"
Documentation = "https://github.com/efrg123/MCP-watch#readme"
Repository = "https://github.com/efrg123/MCP-watch"
"Issues" = "https://github.com/efrg123/MCP-watch/issues"
Changelog = "https://github.com/efrg123/MCP-watch/releases"

[tool.setuptools]
packages = ["mcp_watch"]

[tool.setuptools.package-data]
mcp_watch = ["*.service"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
